--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>404 thinkers | Login</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    
+    <link rel="stylesheet" href="style.css">
     <style>
         .stranger-modal {
             display: none; 
@@ -203,4 +203,5 @@
         }
     </script>
 </body>
+
 </html>
